# FromScratch-App

./: .env.example  .gitignore  GITHUB_ACTIONS_SETUP.md  README.md  SECRETS_SETUP.md  SECURITY.md  STRUCTURE.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  FEATURE_AUTO_PROJECT_GENERATION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: autogen_team.py  diagram_agent.py  export_agent.py  graph.py  metadata_agent.py  nodes.py  planner_agent.py  prompts.py  requirements_agent.py  state.py
backend/app/agents/tools/: db_tools.py  storage_tools.py
backend/app/api/: deps.py  webhook.py  ws.py
backend/app/api/v1/: chat.py  diagrams.py  exports.py  idea.py  (+10 more)
backend/app/core/: config.py  events.py  observability.py  security.py
backend/app/domain/: __init__.py  chats.py  diagram.py  exports.py  invitation.py  log.py  planner.py  project.py  requirement.py  role.py  run.py  task.py  user.py
backend/app/jobs/: __init__.py  blueprint_job.py
backend/app/llm/: provider.py
backend/app/repositories/: artifact_repo.py  chat_repo.py  diagrams_repo.py  exports_repo.py  invitations_repo.py  logs_repo.py  models.py  planners_repo.py  project_repo.py  projects_repo.py  requirements_repo.py  roles_repo.py  run_repo.py  runs_repo.py  session.py  tasks_repo.py  users_repo.py
backend/app/services/: auth_service.py  chat_service.py  diagram_service.py  email_service.py  export_service.py  exports_service.py  log_service.py  planner_service.py  project_service.py  projects_service.py  realtime.py  report_service.py  requirement_service.py  role_service.py  task_service.py  user_service.py
backend/app/utils/: jwt_helper.py
backend/infra/compose/: docker-compose.dev.yml
backend/infra/docker/: Dockerfile  entrypoint.sh
backend/infra/migrations/: alembic.ini  env.py
backend/tests/: test_smoke.py
(+210 files in other folders)
