[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fromscratch"
version = "0.2.0"
description = "Monolith FastAPI + LangGraph orchestration + AutoGen agents + WebSocket streaming"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "beanie>=1.24",
  "motor>=3.2",
  "redis>=5.0",
  "rq>=1.16",
  "httpx>=0.27",
  "jinja2>=3.1",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "minio>=7.2",
  "markdown>=3.6",
  "reportlab>=4.2",
  "weasyprint>=62.3",
  "langchain>=0.3",
  "langchain-community>=0.3",
  "langgraph>=0.2",
  "litellm>=1.47",
  "pyautogen>=0.2.36",
  "langchain-nvidia-ai-endpoints>=0.1.0",
  "langchain-openai>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "libs*", "infra*", "scripts*"]
